[APD-771][APD-775] updating to use a new api in order to avoid empty api call with the old setup.  Also correcting for visibility and the translateX value (since lazyloading mucks with some of the prior setup)

--- a/components/features/gallery/default.scss
+++ b/components/features/gallery/default.scss
@@ -6,7 +6,7 @@
   height: 480px;
   visibility: hidden;
 
-  &.is-Visible {
+  @include breakpoint(desktop-sm) {
     visibility: visible;
   }
 }
